[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Luna.png" type="Texture" id=1]
[ext_resource path="res://Player/Luna.gd" type="Script" id=2]
[ext_resource path="res://Assets/ChargeUp.png" type="Texture" id=3]
[ext_resource path="res://Assets/ChargeBar.png" type="Texture" id=4]
[ext_resource path="res://Assets/NoCharge.png" type="Texture" id=5]
[ext_resource path="res://Player/FpsCounter.gd" type="Script" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 6.0

[node name="Luna" type="RigidBody2D"]
mode = 2
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="LunaSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="ChargeUp" type="Sprite" parent="."]
position = Vector2( 0, 12 )
texture = ExtResource( 3 )

[node name="ChargeBar" type="Sprite" parent="ChargeUp"]
texture = ExtResource( 4 )

[node name="ShowCharge" type="Sprite" parent="ChargeUp"]
position = Vector2( 7, 0 )
texture = ExtResource( 5 )
offset = Vector2( -7, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="FpsCounter" type="Label" parent="."]
margin_left = 11.0
margin_top = 6.0
margin_right = 60.0
margin_bottom = 20.0
rect_scale = Vector2( 0.5, 0.5 )
text = "FPS:"
script = ExtResource( 6 )

[connection signal="body_entered" from="." to="." method="stick"]
